fix(tabs): removed double css rule, aligned dark mode

--- a/tegel/src/components/tabs/folder-tabs/folder-tabs-vars.scss
+++ b/tegel/src/components/tabs/folder-tabs/folder-tabs-vars.scss
@@ -1,5 +1,5 @@
 :root,
-.sdds-theme-light {
+.sdds-mode-light {
   /* NEW THEME VARS */
   --sdds-folder-tab-background-selected: var(--sdds-white);
   --sdds-folder-tab-background: var(--sdds-grey-100);
@@ -31,7 +31,7 @@
   }
 }
 
-.sdds-theme-dark {
+.sdds-mode-dark {
   /* NEW THEME VARS */
   --sdds-folder-tab-background-selected: var(--sdds-grey-900);
   --sdds-folder-tab-background: var(--sdds-grey-846);
