--- a/tegel/src/components/tabs/tab-button/sdds-tab-button.scss
+++ b/tegel/src/components/tabs/tab-button/sdds-tab-button.scss
@@ -13,7 +13,6 @@
     letter-spacing: var(--sdds-headline-07-ls);
     cursor: pointer;
     color: var(--sdds-folder-tab-color);
-    background-color: var(--sdds-folder-tabs-tab-background);
     padding: 16px;
     white-space: nowrap;
     text-decoration: none;
