--- a/tegel/src/components/tabs/tab-link/sdds-tab-link.scss
+++ b/tegel/src/components/tabs/tab-link/sdds-tab-link.scss
@@ -23,7 +23,6 @@
     }
 
     color: var(--sdds-folder-tab-color);
-    background-color: var(--sdds-folder-tabs-tab-background);
     border-top: 2px solid var(--sdds-folder-tab-background);
     background-color: var(--sdds-folder-tab-background);
 
